# svdslateproto

./: .gitignore  CMakeLists.txt  README.md
src/: svd_slate.cpp  svd_slate_only.cpp
